--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </div>
       
       <div class="camp-formulari">
-        <label for="estudis">Nivell d'estudis:</label>
+        <label for="estudis">Estudis:</label>
         <select id="estudis" name="estudis" required>
           <option value="">Selecciona...</option>
           <option value="eso">ESO</option>
           <option value="batxillerat">Batxillerat</option>
-          <option value="universitat">Universitat</option>
+          <option value="universitat">Universitaris</option>
         </select>
       </div>
       
